tests/success/pointer_arithmetic_resolve1.bz
function test()
{
	(consteval {
		mut p: ?*S = null;
		if (p != null)
		{
			++p;
		}
	});
}

struct S
{
	.i: i32;
}
