tests/error/comptime/pointer_arithmetic03.bz
function test()
{
	(consteval {
		consteval i = 0;
		&i + 2;
	});
}
